format blog vol-solo

--- a/content/blog/vol-solo-2010-07-07.fr.md
+++ b/content/blog/vol-solo-2010-07-07.fr.md
@@ -1,56 +1,115 @@
 +++
 title = "Vol solo du 07/07/2010"
 date = "2010-07-07"
-draft = true
+draft = false
 +++
 
-Un début désespérant : Je loupe mes trois tours de piste avec mon instructeur. A chacun, je ne maintiens pas la bonne altitude à tel endroit ou a tel autre, je ne surveille pas assez ma vitesse et j’en passe… Je suis énervé et désespéré à la fois par mes erreurs. Je n’ai pas de casquette et les rayons du soleil par l’effet loupe que produit la courbure de la verrière de l’avion, convergent vers ma tête. Il fait une chaleur étouffante dans ce cockpit ! Immense est donc ma surprise quand Jean-François, mon instructeur, alors que nous rentrons au parking se tourne vers moi et me dit :
+Un début désespérant : Je loupe mes trois tours de piste avec mon
+instructeur. A chacun, je ne maintiens pas la bonne altitude à tel
+endroit ou a tel autre, je ne surveille pas assez ma vitesse et j’en
+passe… Je suis énervé et désespéré à la fois par mes erreurs. Je n’ai
+pas de casquette et les rayons du soleil par l’effet loupe que produit
+la courbure de la verrière de l’avion, convergent vers ma tête. Il fait
+une chaleur étouffante dans ce cockpit ! Immense est donc ma surprise
+quand Jean-François, mon instructeur, alors que nous rentrons au parking
+se tourne vers moi et me dit :
 
-« Ed, tu vas me déposer au parking et faire deux tours de piste seul ! Tu refais la check liste à zéro et t’y retourne ! » + quelques conseils comme tout bon instructeur qui se respecte.
+« Ed, tu vas me déposer au parking et faire deux tours de piste seul !
+Tu refais la check liste à zéro et t’y retourne ! » et quelques conseils
+comme tout bon instructeur qui se respecte.
 
-  Arrivés au parking, J-F sort du cockpit après m’avoir donné sa casquette, je prends la check-list arrêt moteur comme toute fin de vol normale. Le compteur arrivé (comme dans les taxis) est relevé ainsi que l’heure en TU : heure local –2.
-OK, check liste à zéro. La surprise, l’anxiété, le doute s’en vont pour ne laisser place qu’aux automatismes et à la prudence. Check-list avant démarrage terminé, j’allume le moteur.
-D’un seul coup, l’hélice tourne et un  bruit sourd sort du capot, le courant d’air produit par les pales me fait un bien fou ! Je continue la check-list, reprends l’ATIS et une fois prêts je contacte  la tour :
+Arrivés au parking, J-F sort du cockpit après m’avoir donné sa
+casquette, je prends la check-list arrêt moteur comme toute fin de vol
+normale. Le compteur arrivé (comme dans les taxis) est relevé ainsi
+que l’heure en TU : heure local –2.  OK, check liste à zéro. La
+surprise, l’anxiété, le doute s’en vont pour ne laisser place qu’aux
+automatismes et à la prudence. Check-list avant démarrage terminé,
+j’allume le moteur.  D’un seul coup, l’hélice tourne et un  bruit
+sourd sort du capot, le courant d’air produit par les pales me fait un
+bien fou ! Je continue la check-list, reprends l’ATIS et une fois
+prêts je contacte  la tour :
 
 ```blue
 Avion : « Saint Cyr tour de F-HAZC, bonjour ! »
 TWR   : « Saint Cyr tour à F-ZC, bonjour ! »
       - « F-ZC, un P2002 au parking de Boulogne –Billancourt,
          avec information Echo, pour des tours de pistes en solo »
-      - « F-ZC, roulez au point d’arrêt 11 droite et rappelez prêts »
-      - « je roule au point d’arrêt 11 droite et je rappelle prêts »
+      - « F-ZC, roulez au point d’arrêt 11 droite et rappelez prêts » «
+      - je roule au point d’arrêt 11 droite et je rappelle prêts »
 ```
 
-Une fois la manette des gazes réduite, je lâche le frein de parc et l’avion avance lentement en direction du café. Un coup de pédale à gauche et le voilà sur le taxiway. Pour aller au point d’arrêt je dois faire encore un virage à droite pour ensuite rouler sur la partie en herbe du taxiway. Lors de mes virages je fais une autre check-list.  Le taxiway passe devant la tour. Par la baie vitrée, il est possible de distinguer les têtes des contrôleurs penchées sur leurs écrans. Arrivé au point d’arrêt 11 D, il faut terminer une nouvelle check-list et faire les essais moteurs.
+Une fois la manette des gazes réduite, je lâche le frein de parc et
+l’avion avance lentement en direction du café. Un coup de pédale à
+gauche et le voilà sur le taxiway. Pour aller au point d’arrêt je dois
+faire encore un virage à droite pour ensuite rouler sur la partie en
+herbe du taxiway. Lors de mes virages je fais une autre check-list.  Le
+taxiway passe devant la tour. Par la baie vitrée, il est possible de
+distinguer les têtes des contrôleurs penchées sur leurs écrans. Arrivé
+au point d’arrêt 11 D, il faut terminer une nouvelle check-list et faire
+les essais moteurs.
 
 ```blue
 Avion : « F-ZC au point d’arrêt 11 droite, prêt au départ »
 TWR   : « F-ZC maintenez position et attendez, un DR400 est en finale
-          pour la 11 droite »
+        pour la 11 droite »
      -  « je maintiens et j’attends F-ZC »
 ```
 
-Pendant que l’avion en finale se pose, un petit débriefing perso sur les actions à faire en cas de pannes mineures ou majeures avant ou après décollage s’impose.
+Pendant que l’avion en finale se pose, un petit débriefing perso sur les
+actions à faire en cas de pannes mineures ou majeures avant ou après
+décollage s’impose.
 
 ```blue
-  TWR : « F-ZC alignez-vous piste 11 droite, autorisé décollage,
-         vent dans l’axe, 6 nœuds (kts) »
+TWR : « F-ZC alignez-vous piste 11 droite, autorisé décollage,
+        vent dans l’axe, 6 nœuds (kts) »
 Avion : « je m’aligne piste 11 droite autorisé décollage F-ZC »
 ```
 
-Je souffle un coup, aligne l’avion face à la piste en herbe devant moi et pousse la manette des gazes jusqu’au bout. L’avion accélère. Un œil sur le tachymètre et l’anémomètre, un œil sur la piste,  je parle à haute voix pour me rassurer pendant que l’avion  dévore  les centaines de mètre qui le sépare du bout de piste : « 2000 tours par minute ok ! Rotation à 55kts ». A 55kts, l’avion commence à faire des petits bonds, je tire lentement sur le manche.  Je ne sens plus alors le contact avec le sol. A la place un vide  se forme sous l’avion  et je ressens comme   l’emprise de câble invisibles qui soulèvent le tecnam.
-Ca y est je décolle ! Privé d’un sacré poids, celui de mon instructeur, l’avion monte très vite. Je reste concentré et avec les palonniers je conserve l’axe de la piste. Rapidement, le lycée militaire s’éloigne derrière mon aile droite, je ne le vois pas, mais je le sais…Je ne regarde que devant moi. L’avion en montée passe au dessus de grands arbres et à sa gauche s’offre alors à mes yeux le château de Versailles et ses bassins. A 700 pieds (fts), je range les volets, mais par sécurité avec cette grosse chaleur je laisse la pompe. L’aiguille de l’anémomètre quitte alors l’arc blanc pour se fixer à 80 kts. En m’aidant de l’horizon artificiel, je fais un virage de 30° d’inclinaison, pour survoler un grand bassin et je me retrouve alors perpendiculaire à la piste. A 1100 fts, je diminue l’assiette (l’angle entre l’axe de l’avion et l’horizontale) et je réduits alors le moteur à 1700 RPM (tours par minute). Un peu à gauche, il est possible de distinguer Paris et la tour Eiffel !
-Afin de ne pas dépasser la rocade de Bailly, l’avion fait un quart de tours vers la droite et prends un cap de façon à être parallèle à la piste. J’appelle la radio :
+Je souffle un coup, aligne l’avion face à la piste en herbe devant moi
+et pousse la manette des gazes jusqu’au bout. L’avion accélère. Un œil
+sur le tachymètre et l’anémomètre, un œil sur la piste,  je parle à
+haute voix pour me rassurer pendant que l’avion  dévore  les centaines
+de mètre qui le sépare du bout de piste : « 2000 tours par minute ok !
+Rotation à 55kts ». A 55kts, l’avion commence à faire des petits bonds,
+je tire lentement sur le manche.  Je ne sens plus alors le contact avec
+le sol. A la place un vide  se forme sous l’avion  et je ressens comme
+l’emprise de câble invisibles qui soulèvent le tecnam.  Ca y est je
+décolle ! Privé d’un sacré poids, celui de mon instructeur, l’avion
+monte très vite. Je reste concentré et avec les palonniers je conserve
+l’axe de la piste. Rapidement, le lycée militaire s’éloigne derrière mon
+aile droite, je ne le vois pas, mais je le sais…Je ne regarde que devant
+moi. L’avion en montée passe au dessus de grands arbres et à sa gauche
+s’offre alors à mes yeux le château de Versailles et ses bassins. A 700
+pieds (fts), je range les volets, mais par sécurité avec cette grosse
+chaleur je laisse la pompe. L’aiguille de l’anémomètre quitte alors
+l’arc blanc pour se fixer à 80 kts. En m’aidant de l’horizon artificiel,
+je fais un virage de 30° d’inclinaison, pour survoler un grand bassin et
+je me retrouve alors perpendiculaire à la piste. A 1100 fts, je diminue
+l’assiette (l’angle entre l’axe de l’avion et l’horizontale) et je
+réduits alors le moteur à 1700 RPM (tours par minute). Un peu à gauche,
+il est possible de distinguer Paris et la tour Eiffel !  Afin de ne pas
+dépasser la rocade de Bailly, l’avion fait un quart de tours vers la
+droite et prends un cap de façon à être parallèle à la piste. J’appelle
+la radio :
 
 ```blue
 Avion : « F-ZC, en vent travers pour la 11 »
-TWR   : « F-ZC, un Cessna est de retour par le nord, rappelez en étape de
-          base pour la 11 gauche »
-Avion : « ok pour le Cessna, je rappelle en étape de base pour la 11 gauche,
-          F-ZC »
+TWR   : « F-ZC, un Cessna est de retour par le nord, rappelez en étape
+        de base pour la 11 gauche »
+Avion : « ok pour le Cessna, je rappelle en étape de base pour la 11
+        gauche, F-ZC »
 ```
 
-  Au moment où, l’avion a dépassé le début de piste, je le mets en palier approche : J’augmente un peu l’assiette, je réduits à 1100 RPM et j’appuie deux ou trois fois sur le bouton du compensateur arrière sur le manche. L’avion perds alors très vite de la vitesse et une fois l’aiguille de l’anémomètre dans l’arc blanc, je sors un cran de volet et je pousse la manette des gaz afin d’atteindre les 1500 RPM. Après avoir observé un repère sur le sol entre deux champs, je  fais un virage serré sur la droite pour me retrouver à nouveau perpendiculaire à la piste que j’observe sur le côté gauche du capot de l’avion. Je réduits les gazes à 1100 RPM et je commence à descendre.
+Au moment où, l’avion a dépassé le début de piste, je le mets en
+palier approche : J’augmente un peu l’assiette, je réduits à 1100 RPM
+et j’appuie deux ou trois fois sur le bouton du compensateur arrière
+sur le manche. L’avion perds alors très vite de la vitesse et une fois
+l’aiguille de l’anémomètre dans l’arc blanc, je sors un cran de volet
+et je pousse la manette des gaz afin d’atteindre les 1500 RPM. Après
+avoir observé un repère sur le sol entre deux champs, je  fais un
+virage serré sur la droite pour me retrouver à nouveau perpendiculaire
+à la piste que j’observe sur le côté gauche du capot de l’avion. Je
+réduits les gazes à 1100 RPM et je commence à descendre.
 
 ```blue
 Avion : « F-ZC, en Base pour la 11 gauche »
@@ -58,7 +117,31 @@ TWR   : « F-ZC, rappelez finale  11 gauche »
       - « Je rappelle finale 11 gauche F-ZC »
 ```
 
-En terminant mon dernier virage, je sors le deuxième cran de volet. En finale, la manœuvre est délicate. Il faut garder l’avion dans un plan inclinés de 15% par rapport à la piste devant soi ,  conserver sa vitesse dans l’arc blanc de l’anémomètre, garder suffisamment de régime au moteur pour l’atterrissage et surtout surveiller que l’avion ne soit pas en sous vitesse sinon c’est le crash dans les arbres devenus dangereux une fois l’altitude basse ou bien le crash dans l’autoroute au bords du bout de piste par un décrochage à basse altitude .  En voulant faire un atterrissage court je vise beaucoup trop le début de la piste malgré la présence de l’autoroute. Sax qui m’a suivi des yeux depuis la tour, me fera la remarque une fois le vol terminé.  Lorsque l’avion est suffisamment proche du sol sans le toucher, je redresse le nez et je réduits  totalement les gazes de façon qu’avec la vitesse de la descente, l’avion puisse poser  doucement sur la piste ses deux roues arrières. Les deux roues posées, il faut continuer à tirer sur la manette des gazes et tirer sur le manche. Ainsi la vitesse de roulage atteinte, la roue avant de l’avion se pose naturellement et je peux ensuite tirer sur les freins. L’atterrissage finis je dégage rapidement de la piste et je contacte la tour pour leur demander de refaire un tour de piste.
+En terminant mon dernier virage, je sors le deuxième cran de volet. En
+finale, la manœuvre est délicate. Il faut garder l’avion dans un plan
+inclinés de 15% par rapport à la piste devant soi ,  conserver sa
+vitesse dans l’arc blanc de l’anémomètre, garder suffisamment de régime
+au moteur pour l’atterrissage et surtout surveiller que l’avion ne soit
+pas en sous vitesse sinon c’est le crash dans les arbres devenus
+dangereux une fois l’altitude basse ou bien le crash dans l’autoroute au
+bords du bout de piste par un décrochage à basse altitude .  En voulant
+faire un atterrissage court je vise beaucoup trop le début de la piste
+malgré la présence de l’autoroute. Sax qui m’a suivi des yeux depuis la
+tour, me fera la remarque une fois le vol terminé.  Lorsque l’avion est
+suffisamment proche du sol sans le toucher, je redresse le nez et je
+réduits  totalement les gazes de façon qu’avec la vitesse de la
+descente, l’avion puisse poser  doucement sur la piste ses deux roues
+arrières. Les deux roues posées, il faut continuer à tirer sur la
+manette des gazes et tirer sur le manche. Ainsi la vitesse de roulage
+atteinte, la roue avant de l’avion se pose naturellement et je peux
+ensuite tirer sur les freins. L’atterrissage finis je dégage rapidement
+de la piste et je contacte la tour pour leur demander de refaire un tour
+de piste.
 
-Le deuxième tour de piste fut identique au premier,  avec juste un peu moins d’appréhension.  Le vol terminé je rejoins Jean-François à l’aéroclub où je remplis les papiers et rentre sur openflyers le vol d’aujourd’hui. . Nous débriefons ensuite  dans l’une des salles de l’aéroclub.
-Heureux , je suis finalement fier de présenter à mon instructeur mon carnet de vol afin qu’il signe mes premières quarante minutes  de vol comme commandant de bord (sur petit tecnam P2002).
+Le deuxième tour de piste fut identique au premier,  avec juste un peu
+moins d’appréhension.  Le vol terminé je rejoins Jean-François à
+l’aéroclub où je remplis les papiers et rentre sur openflyers le vol
+d’aujourd’hui. . Nous débriefons ensuite  dans l’une des salles de
+l’aéroclub.  Heureux , je suis finalement fier de présenter à mon
+instructeur mon carnet de vol afin qu’il signe mes premières quarante
+minutes  de vol comme commandant de bord (sur petit tecnam P2002).
