--- a/content/blog/vol-solo-2010-07-07.fr.md
+++ b/content/blog/vol-solo-2010-07-07.fr.md
@@ -1,7 +1,7 @@
 +++
 title = "Vol solo du 07/07/2010"
 date = "2010-07-07"
-draft = false
+draft = true
 +++
 
 Un début désespérant : Je loupe mes trois tours de piste avec mon
