--- a/content/blog/tlc2019.md
+++ b/content/blog/tlc2019.md
@@ -70,6 +70,41 @@ Talks, I attended:
 
 # c-base, a Raumstation unter Berlin
 
+```
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⣿⣻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡧⣿⣷⣿⣿⣿⣿⣿⣿⣿⣿⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⢿⣻⡿⠞⠋⠉⠻⡿⢿⣿⣿⠿⠟⠛⠛⠉⠛⠃⠙⠻⠛⢿⣿⢿⣿⣿⣿⣿⣿⣿⣏⡙⠻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⡿⣛⢭⠞⠋⠁⠄⠄⠄⠄⣠⢖⣠⣤⢼⣶⠶⠟⢛⣻⣿⠄⢸⣶⣾⣬⡉⠙⠛⠳⢾⣫⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠛⠋⠙⠟⣫⡴⠋⠄⠄⠄⠄⢀⣠⣶⠿⠯⠉⢋⣩⣥⣶⡿⢿⡿⠟⠻⠃⢻⣤⣄⣀⠄⠁⠛⢦⣴⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⠿⠍⠉⠄⠄⢠⡼⠋⢀⠄⠄⢀⢌⣴⠟⣹⣦⣀⣴⣚⣿⣿⠛⠁⣡⣠⣾⣾⣿⠂⠛⠛⠻⣿⡛⢲⣔⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⡿⠛⠻⠅⣤⠄⠠⠋⠄⠄⠋⠄⠠⢠⡟⣡⣾⣿⣿⡿⠛⠟⠛⠄⠄⠺⢟⢻⠫⠉⠄⠄⠄⠄⣢⢿⣿⣦⢺⣿⣻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⠟⣴⡶⠾⠄⠉⣠⣤⣤⣤⢤⣤⢤⡦⠄⠐⣿⣿⣿⡟⠃⠄⠄⠂⠄⣠⣤⣶⣯⠁⠄⠄⠄⣈⣴⣦⣸⣿⢿⣗⢓⣺⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⠄⣈⠰⠂⠄⠄⣭⡍⠾⠇⠾⠓⠚⢣⡤⠬⠿⢿⡷⢾⡀⠄⣀⣴⠄⠄⠙⢮⡻⢷⣦⣤⣤⣬⣝⢿⣿⣿⣟⡐⢠⢽⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⠁⠄⠄⡄⠄⠄⠄⠄⢀⣀⠤⠤⠐⡆⢶⡖⠈⠄⣩⣶⣿⣷⣿⣿⣿⣦⡀⠄⠄⠈⠁⠄⠊⠛⠛⠛⢉⣹⣟⠟⠇⠩⠿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⡇⠈⠁⠄⠄⠭⠄⢸⠄⠄⠄⠄⠄⠄⢁⠸⣿⣶⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣦⣤⣀⣀⣀⣀⣀⣀⠒⠈⠁⠄⠄⠄⢀⣨⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⡁⠄⠄⠄⠄⣫⠄⠘⡄⠄⠄⠄⠄⠄⠄⢂⠹⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡟⠛⠛⠛⣿⡄⠄⠄⣀⡀⠄⠻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⡆⠄⠄⠄⠄⠐⣊⠄⢣⠄⠄⠄⠄⠄⠄⠄⠳⡘⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠁⠄⠄⠄⠈⠉⠉⢻⡝⣷⠼⢎⡦⣿⠞⠿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⡇⠄⠄⠄⠄⠄⠐⠂⠄⢦⠄⠄⠄⠄⠄⠄⠄⠈⠢⣝⠻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣏⡀⠄⠄⣀⣀⣀⣀⣼⣿⡄⠺⣍⡅⠔⢂⣡⣌⢩⠻⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⠄⠄⠄⠄⠄⠄⠡⠒⠄⠳⡀⠄⠄⠄⠄⠄⠄⠄⠄⠙⠲⢍⡛⠿⣿⣿⣿⣿⣿⣿⣿⣷⣤⣤⣿⣿⣿⣿⣿⣿⣷⣀⡙⠊⠺⡿⡽⣿⣷⣭⡦⡽⡿⣿⣿⣿⣿⣿⢿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣧⠄⠄⠄⠄⠄⠄⠄⠠⠂⠈⠢⡀⠄⠄⠄⠄⠄⠄⠄⠄⠄⠈⠑⠒⠬⠍⣙⣛⠛⠛⠿⠿⠿⠿⠿⠿⠟⢛⣛⣋⠭⠴⡄⠈⠹⢿⣿⣹⣿⣿⣭⣿⣍⠻⢿⠟⠛⢻⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣧⠄⠄⠄⠄⠄⠄⢄⠊⡀⠄⠈⠲⣄⠄⠄⠄⡀⠄⠄⠂⠄⢠⠄⠄⠄⠄⠄⠉⠉⠉⠉⠉⢩⣭⣭⣭⡍⠁⠄⠄⠉⠿⡀⠁⠠⡻⣿⣿⣿⣿⣿⡽⢷⣄⠄⠈⣾⡿⣹⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣧⣄⣠⣤⠖⠳⣆⣑⢤⣘⢀⠄⠄⠙⠢⢬⡛⠁⢤⡀⠄⣄⠄⠄⠄⠄⠊⠉⠗⡿⠄⠄⠈⠛⠿⡿⠁⠄⠄⠄⠄⠄⠈⠄⠄⠐⠸⢿⡷⠝⠋⠁⠃⢝⣿⣶⣯⣊⣻⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣽⢿⣦⣽⣿⣷⢍⠂⠄⠄⠄⠄⠄⠈⠙⠲⠤⣍⣛⠒⠄⠄⠄⠄⠄⠄⣀⠄⠄⠄⠄⠄⢀⣀⠄⠄⠄⠄⠄⣀⣠⠄⠄⠈⠁⠄⠄⠄⢀⣠⡉⠙⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣦⡈⠛⣿⣿⠄⠄⠄⠈⠐⠠⢀⠄⠄⠄⢀⡆⢠⡍⢙⡒⠒⡲⠶⠦⠥⠤⠤⠤⠥⢤⡤⢶⣶⢲⡒⢉⡍⢰⡄⢼⠄⠄⠄⣠⣤⡂⠙⢄⠉⢶⣾⣿⡟⢿⣾⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣿⠋⠄⠄⠄⠄⠄⠄⠄⠈⠑⠂⠬⢄⣉⠁⠻⠲⠿⠥⣿⢀⣿⠄⣾⠄⣿⠄⣿⠱⡿⠘⠗⠄⠛⢀⡀⠄⠄⠂⠁⢘⣿⣷⣴⠈⢀⣠⣿⣥⣶⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣶⣄⠄⠄⠄⠰⠄⢀⢀⠄⠂⠄⠐⠄⠉⠉⠒⠒⠒⢸⣤⠤⡄⠄⠄⠄⠄⠒⣖⡒⠄⠄⠄⠄⠄⠄⠄⠄⡁⠄⣘⠿⠟⠋⣠⣼⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣦⣄⡀⠁⠛⠃⠠⣤⡀⠄⠄⡀⠄⠄⠰⡾⠿⠿⢿⣦⡀⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠤⣾⣻⣿⣷⣴⣶⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣶⣤⣤⣀⣈⠃⠄⠄⠄⠄⠄⠄⠜⠻⠷⣶⠶⠦⠄⢀⡀⠄⣀⣤⣤⣶⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⢿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣶⣶⣶⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠄⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠄⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⡿⠋⠉⣀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠄⢸⣿⣏⠉⠙⠻⣿⣿⣿⣿⠟⠉⢉⡉⠙⠻⣿⣿⣿⣿⠟⠉⢉⣹⣿⣿⣿⣿⣿⣿⠟⠋⢁⣀⠉⠛⢿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⠄⣰⣿⣿⣿⣿⣿⣿⣿⣿⠿⠿⠿⠿⢿⣿⣿⠄⢸⣿⣿⣿⣷⠄⢹⣿⣿⠃⢠⣾⣿⣿⣷⡀⢹⣿⣿⡇⢀⣾⡿⠻⣿⣿⣿⣿⣿⡏⠄⣾⡿⠻⣿⡆⠈⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⡀⠹⣿⣿⣿⠟⠄⣼⣿⣿⣶⣶⣶⣶⣾⣿⣿⡀⠸⣿⣿⣿⡿⠄⣼⣿⣿⡄⠘⢿⣿⣿⣿⡇⢸⣿⣿⣿⣿⣿⣷⣴⡿⠃⢠⣿⣿⣇⠄⢿⣷⣶⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣷⣤⣀⡉⣁⣠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣤⣀⢉⣁⣠⣴⣿⣿⣿⣿⣦⣀⠉⣿⣿⣷⣾⣿⣿⣿⣿⣿⣿⢉⣀⣴⣿⣿⣿⣿⣦⣄⣈⣹⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+```
+
 [c-base](https://c-base.org) is the oldest crashed space station on earth.
 
 
@@ -77,6 +112,33 @@ I have unstacked a lot of sats playing with the funny
 hardware of the second floor, buying stickers, hot chocolate, coffee and
 beer. The speed of transaction was very fast and with very few fee,
 Although my Eclair Wallet has only two channels.
+
+```
+⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣤⣶⣶⣶⣶⣶⠶⠶⣶⣶⡶⠶⠶⠶⠶⠶⠶⢦⡀⠄⠄⠄⠄⠄⠄⠄⠄⠄|---------------|-----|
+⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢸⡿⠂⠈⠉⠄⠄⠄⠄⠈⠉⠄⠄⠄⠄⠄⠄⠄⠄⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄| amount        | fee |
+⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢸⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄|---------------|-----|
+⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢸⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄| 38 394,47     | 61  |
+⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢸⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄| 30 8469       | 0   |
+⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢸⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄| 101           | 1   |
+⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢸⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄| 226001        | 0   |
+⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠈⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄| 139 580,972   | 222 |
+⠄⠄⠄⠄⠄⠄⠄⠄⠄⢀⠑⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣿⠄⠄⠄⠄⠄⠄⠄⠄⠄| 402,643       | 0   |
+⠄⠄⠄⠄⠄⠄⠄⢀⣔⣥⣄⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣷⣦⣤⣐⡀⠄⠄⠄⠄⠄| 34 891,799    | 175 |
+⠄⠄⠄⠄⠄⠄⣤⣴⣿⣿⡿⣇⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣿⣿⡿⠟⠄⠄⠄⠄⠄⠄| 87 359,735    | 9   |
+⠄⠄⠄⠄⠄⣰⣿⣿⣿⡟⠁⣿⠄⠄⠄⠄⠄⠄⠄⠠⡶⠄⠄⠄⠄⢀⢀⢄⣤⡟⠉⠄⠄⠄⠄⠄⠄⠄⠄| 80 374,362    | 402 |
+⠄⠄⠄⠄⣼⣿⣿⣿⣿⠇⠄⣿⠄⠄⠄⠄⢀⣴⣮⣧⣡⣶⣾⢻⣼⣫⢮⣿⣿⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄| 56 574        | 0   |
+⠄⠄⠄⢰⣿⡿⢻⢽⣿⠄⣀⣿⠄⠄⠄⠄⢸⣿⣛⣿⣼⣻⡾⣿⢿⡻⣿⡟⣯⣿⣦⣤⡆⠄⠄⠄⠄⠄⠄| 45 258        | 0   |
+⠄⠄⠄⣾⣿⡇⠄⠄⠘⣿⣿⣿⠄⠄⠄⢴⣿⠿⣿⡿⠿⣷⣻⣿⠵⣿⠻⢽⢷⣿⡿⠟⠄⠄⠄⠄⠄⠄⠄| 113 145       | 0   |
+⠄⠄⠄⣿⣿⠛⠃⠄⠄⠈⣿⣿⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣿⣇⠄⠄⠄⠄⠄⠄⠄⠄⠄|---------------|-----|
+⠄⠄⠄⣿⣿⡇⠄⠄⠄⠄⠸⣿⣿⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣿⣴⠄⠄⠄⠄⠄⠄⠄⠄⠄| 1 130 551,981 | 870 |
+⠄⠄⠄⣿⣿⣿⡂⠄⠄⠄⠄⣿⣤⠐⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣟⡿⠛⠄⠄⠄⠄⠄⠄⠄⠄
+⠄⠄⠄⣿⣿⣿⣿⣆⠄⠄⠄⣿⣯⣿⣿⣿⣿⣿⣿⣿⣛⣿⣿⣿⣿⣿⣿⣿⣿⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄
+⠄⠄⢸⣿⣿⣿⣿⣿⣇⠄⠄⢹⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⠃⠄⠄⠄⠄⠄⠄⠄⠄⠄
+⠄⢠⣿⣿⣿⣿⣿⣿⣿⣦⡀⠄⠉⠻⣿⣿⣿⣿⣿⠟⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+⠜⠉⠟⠍⠻⢿⣿⣿⣿⡷⣆⠄⠄⠄⠈⢹⣿⡿⠃⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+⠄⠄⠄⠄⠄⠄⠈⠛⢿⣿⣿⡒⠄⠄⠄⠸⠋⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+```
+
 
 | amount        | fee |
 |---------------|-----|
