fix(blog): tlc2019

--- a/content/blog/tlc2019.md
+++ b/content/blog/tlc2019.md
@@ -66,6 +66,9 @@ Talks, I attended:
 - 10:20 Make me an offer: Next Level Invoicing - Rusty Russell
 - 11:20 How much Better Could Lightning Be? - Fabrice Drouin
 
+
+Sadly, I could not enter in the sponsored party.
+
 # Day 2
 
 # c-base, a Raumstation unter Berlin
@@ -131,12 +134,12 @@ Although my Eclair Wallet has only two channels.
 ⠄⠄⠄⣾⣿⡇⠄⠄⠘⣿⣿⣿⠄⠄⠄⢴⣿⠿⣿⡿⠿⣷⣻⣿⠵⣿⠻⢽⢷⣿⡿⠟⠄⠄⠄⠄⠄⠄⠄| 113 145       | 0   |
 ⠄⠄⠄⣿⣿⠛⠃⠄⠄⠈⣿⣿⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣿⣇⠄⠄⠄⠄⠄⠄⠄⠄⠄|---------------|-----|
 ⠄⠄⠄⣿⣿⡇⠄⠄⠄⠄⠸⣿⣿⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣿⣴⠄⠄⠄⠄⠄⠄⠄⠄⠄| 1 130 551,981 | 870 |
-⠄⠄⠄⣿⣿⣿⡂⠄⠄⠄⠄⣿⣤⠐⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣟⡿⠛⠄⠄⠄⠄⠄⠄⠄⠄
-⠄⠄⠄⣿⣿⣿⣿⣆⠄⠄⠄⣿⣯⣿⣿⣿⣿⣿⣿⣿⣛⣿⣿⣿⣿⣿⣿⣿⣿⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄
-⠄⠄⢸⣿⣿⣿⣿⣿⣇⠄⠄⢹⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⠃⠄⠄⠄⠄⠄⠄⠄⠄⠄
-⠄⢠⣿⣿⣿⣿⣿⣿⣿⣦⡀⠄⠉⠻⣿⣿⣿⣿⣿⠟⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
-⠜⠉⠟⠍⠻⢿⣿⣿⣿⡷⣆⠄⠄⠄⠈⢹⣿⡿⠃⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
-⠄⠄⠄⠄⠄⠄⠈⠛⢿⣿⣿⡒⠄⠄⠄⠸⠋⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+⠄⠄⠄⣿⣿⣿⡂⠄⠄⠄⠄⣿⣤⠐⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣟⡿⠛⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+⠄⠄⠄⣿⣿⣿⣿⣆⠄⠄⠄⣿⣯⣿⣿⣿⣿⣿⣿⣿⣛⣿⣿⣿⣿⣿⣿⣿⣿⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+⠄⠄⢸⣿⣿⣿⣿⣿⣇⠄⠄⢹⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⠃⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+⠄⢠⣿⣿⣿⣿⣿⣿⣿⣦⡀⠄⠉⠻⣿⣿⣿⣿⣿⠟⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+⠜⠉⠟⠍⠻⢿⣿⣿⣿⡷⣆⠄⠄⠄⠈⢹⣿⡿⠃⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+⠄⠄⠄⠄⠄⠄⠈⠛⢿⣿⣿⡒⠄⠄⠄⠸⠋⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
 ```
 
 
