--- a/content/blog/tlc2019.md
+++ b/content/blog/tlc2019.md
@@ -12,12 +12,11 @@ draft = true
   z$$$$P        / /   (_)___ _/ /_  / /_____  (_)___  ____ _
  d$$$$$$$$$$"  / /   / / __ `/ __ \/ __/ __ \/ / __ \/ __ `/
 *******$$$"   / /___/ / /_/ / / / / /_/ / / / / / / / /_/ /
-     .$$$"   /_____/_/\__, /_/ /_/\__/_/ /_/_/_/ /_/\__, /
-    .$$"  _____      /____/ ____                   /____/
-   4$P"  / ____/___  ____  / __/__  ________  ____  ________
-  z$"   / /   / __ \/ __ \/ /_/ _ \/ ___/ _ \/ __ \/ ___/ _ \
- zP    / /___/ /_/ / / / / __/  __/ /  /  __/ / / / /__/  __/
-z"     \____/\____/_/ /_/_/  \___/_/   \___/_/ /_/\___/\___/
+     .$$$" __/_____/_/\__, /_/_/_/\__/_/ /_/_/_/ /_/\__, /
+    4$P"  / ____/___  ____  / __/__  ________  ____  ________
+   z$"   / /   / __ \/ __ \/ /_/ _ \/ ___/ _ \/ __ \/ ___/ _ \
+  zP    / /___/ /_/ / / / / __/  __/ /  /  __/ / / / /__/  __/
+ z"     \____/\____/_/ /_/_/  \___/_/   \___/_/ /_/\___/\___/
 
 ```
 
@@ -58,7 +57,10 @@ noise of the crowd, but it was very instructive.
 
 # Room 77 and the 600,000th block
 
-# Day 1
+Room77 is one of the first place in the world which accepted bitcoin
+payments. Feel
+
+# Day 1 --
 
 Talks, I attended:
 
@@ -69,7 +71,7 @@ Talks, I attended:
 
 Sadly, I could not enter in the sponsored party.
 
-# Day 2
+# Day 2 --
 
 # c-base, a Raumstation unter Berlin
 
@@ -141,24 +143,6 @@ Although my Eclair Wallet has only two channels.
 ⠜⠉⠟⠍⠻⢿⣿⣿⣿⡷⣆⠄⠄⠄⠈⢹⣿⡿⠃⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
 ⠄⠄⠄⠄⠄⠄⠈⠛⢿⣿⣿⡒⠄⠄⠄⠸⠋⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
 ```
-
-
-| amount        | fee |
-|---------------|-----|
-| 38 394,47     | 61  |
-| 30 8469       | 0   |
-| 101           | 1   |
-| 226001        | 0   |
-| 139 580,972   | 222 |
-| 402,643       | 0   |
-| 34 891,799    | 175 |
-| 87 359,735    | 9   |
-| 80 374,362    | 402 |
-| 56 574        | 0   |
-| 45 258        | 0   |
-| 113 145       | 0   |
-| _             | _   |
-| 1 130 551,981 | 870 |
 
 At the current price: 83,37 euros
 
