--- a/content/blog/tlc2019.md
+++ b/content/blog/tlc2019.md
@@ -55,6 +55,42 @@ The lack of space in the main room droved us to work in front of
 the bar. It was difficult to discuss in this area because of the
 noise of the crowd, but it was very instructive.
 
+My check-in to the hotel was at 6:00pm. I left the space, took the
+subway and get out to the nearest station. I could take the bus then, but I
+wanted to look at the street of Berlin. Walking along a wall, thinking
+of the Lightning, the exciting future to come, I noticed after several
+hundred meters how long this wall was and the size of its paintings.
+```
+⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢀⡀⠤⠐⠒⠄⠈⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡠⠂⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢸
+⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡠⠊⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣀⣤⣶⣿
+⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡜⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣀⣴⣶⣿⣿⣿⣿⣿
+⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡜⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢀⣀⣤⣶⣿⣿⣿⣿⣿⡿⠟⠋⠁
+⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢰⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢀⣠⣤⣾⣿⣿⣿⣿⠿⠛⠋⠙⠐⠄⠄⠄⠄
+⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠂⠄⠄⡀⠄⠄⡎⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢀⣠⣴⣶⣿⣿⣿⡿⠟⠛⠉⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠁⠄⠄⠄⠄⠄⠄⡯⠄⠄⡇⠄⠄⠄⠄⠄⠄⠄⠄⢀⣠⣶⣶⣿⣿⣿⡿⠟⠛⠉⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡔⠄⠄⠄⠄⠄⠄⠄⠄⣀⣀⣀⠄⡇⠄⠄⠄⢀⣠⣴⣶⣾⣿⣿⠿⠟⠋⠉⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+⠄⠄⠄⠄⠄⠄⢀⠄⠐⠄⡘⠄⠄⠄⠄⠄⠄⠄⠄⠄⠙⣻⠋⠨⣇⣤⣶⣶⣿⡿⠿⠛⠉⠄⢸⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+⠄⠄⠄⠄⢀⠄⠄⠄⠄⢀⠃⠄⠄⠄⠄⠄⠄⠄⢀⣠⣤⣶⣿⣿⠿⠟⠛⠉⠁⠄⠄⠄⠄⠄⢸⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢀⠑⠄⠄⠄⠄⠄⢂⠄⠄⠄⠄
+⠄⠄⠄⠄⠂⠄⠄⠈⠄⢸⠄⠄⠄⢀⣠⣴⣶⣿⠿⠛⠛⠉⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡀⠄⠄⠄⠄⠄⠄⢀⠂⠄⠄⠄⠄⠢⢅⠢⠄⠄⠄
+⠄⠄⠠⠈⠄⠄⠄⠄⠄⣸⣤⣶⡾⠿⠛⠉⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣤⠄⢠⡀⠄⠄⠄⠄⠄⠄⢀⡎⠇⠄⠄⠄⠄⢀⠈⠄⡄⠄⠰⣤⣺⢸⢐⠖⠈⡀⠄
+⠄⠄⠁⡖⠄⣀⣠⣴⠿⠛⠉⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠰⠟⠃⡟⠄⠄⠂⢂⢈⠄⠄⡸⠄⠄⠄⠄⠄⠠⡠⠄⢁⣧⢂⠠⠙⠄⢨⢾⣦⣨⣧⡰
+⢀⣬⣴⠷⠟⠛⠉⠄⠄⠄⠄⠄⢀⠄⠄⡀⠄⠄⠄⠄⠄⠄⠄⠄⢐⠄⠄⡀⠈⠄⢹⠄⠠⠄⠑⠄⠠⠰⣀⢀⠉⢀⠃⠉⠈⢠⠄⣇⢬⣷⣮⠵⣆⣇⣿⣸⣿⣿⣿⣮
+⠋⠉⠄⠄⠄⢀⠄⠄⠄⠄⢀⡆⣸⠄⠄⡁⠄⠄⠄⠄⠄⢀⠄⠄⠠⠄⠄⠰⠄⡁⡈⠄⠅⡨⡄⣠⣧⣷⣿⠬⣺⠺⣠⢴⡎⣸⡶⣥⣼⣷⣿⣟⣩⢐⣶⣿⣿⣿⣿⣿
+⠄⡀⠄⡄⠄⢿⢀⠄⠄⣦⢸⣟⣿⠄⠄⠄⠄⠄⠄⠄⢀⠘⠄⠄⢖⠄⠄⣠⠠⣬⣷⠘⣸⢧⡽⣿⣿⣿⣿⣼⣿⣿⣿⣿⣷⣿⣿⣿⣿⣿⣿⣿⣾⣾⣿⣿⣿⣿⣿⣿
+⡃⣩⣿⡇⠐⣯⡏⡇⠄⠈⢸⣿⣷⠄⠄⡄⠄⠄⠄⣤⡌⣄⠇⢀⣨⠄⠄⠄⠺⣧⣟⢨⣳⣼⣷⣿⣿⣿⣿⡿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⡏⣵⡝⡇⠄⡩⢃⣀⠄⠄⢻⣿⣿⠄⠄⠵⢀⢰⡆⠿⠿⣻⡠⢸⣹⠄⣧⢚⢼⣿⣾⣾⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⡟⠞⠃⠃⠐⣗⢨⠜⠄⠄⢸⣿⣿⠄⠄⠆⠄⠈⢃⠄⢠⠈⠁⣹⣽⢀⢩⣼⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣷⣶⣶⣷⣶⣶⣤⣶⣶⣾⣿⣿⣦⣤⣦⣤⣤⣼⣥⣄⣬⣴⣷⣧⣼⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+```
+
+On a little sign, near the ground, was written: **Berliner Mauer**. \\
+One month before its 30th anniversary, this wall did not catch my eyes. \\
+The contemporary concrete and its cold appearance feels actual. \\
+A rigid line separating families and friends feels actual. \\
+The cold war against individual liberties feels actual.
+
 # Room 77 and the 600,000th block
 
 Room77 is one of the first place in the world which accepted bitcoin
@@ -76,38 +112,38 @@ Sadly, I could not enter in the sponsored party.
 # c-base, a Raumstation unter Berlin
 
 ```
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⣿⣻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡧⣿⣷⣿⣿⣿⣿⣿⣿⣿⣿⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⢿⣻⡿⠞⠋⠉⠻⡿⢿⣿⣿⠿⠟⠛⠛⠉⠛⠃⠙⠻⠛⢿⣿⢿⣿⣿⣿⣿⣿⣿⣏⡙⠻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⡿⣛⢭⠞⠋⠁⠄⠄⠄⠄⣠⢖⣠⣤⢼⣶⠶⠟⢛⣻⣿⠄⢸⣶⣾⣬⡉⠙⠛⠳⢾⣫⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠛⠋⠙⠟⣫⡴⠋⠄⠄⠄⠄⢀⣠⣶⠿⠯⠉⢋⣩⣥⣶⡿⢿⡿⠟⠻⠃⢻⣤⣄⣀⠄⠁⠛⢦⣴⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⠿⠍⠉⠄⠄⢠⡼⠋⢀⠄⠄⢀⢌⣴⠟⣹⣦⣀⣴⣚⣿⣿⠛⠁⣡⣠⣾⣾⣿⠂⠛⠛⠻⣿⡛⢲⣔⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⡿⠛⠻⠅⣤⠄⠠⠋⠄⠄⠋⠄⠠⢠⡟⣡⣾⣿⣿⡿⠛⠟⠛⠄⠄⠺⢟⢻⠫⠉⠄⠄⠄⠄⣢⢿⣿⣦⢺⣿⣻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⠟⣴⡶⠾⠄⠉⣠⣤⣤⣤⢤⣤⢤⡦⠄⠐⣿⣿⣿⡟⠃⠄⠄⠂⠄⣠⣤⣶⣯⠁⠄⠄⠄⣈⣴⣦⣸⣿⢿⣗⢓⣺⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⠄⣈⠰⠂⠄⠄⣭⡍⠾⠇⠾⠓⠚⢣⡤⠬⠿⢿⡷⢾⡀⠄⣀⣴⠄⠄⠙⢮⡻⢷⣦⣤⣤⣬⣝⢿⣿⣿⣟⡐⢠⢽⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⠁⠄⠄⡄⠄⠄⠄⠄⢀⣀⠤⠤⠐⡆⢶⡖⠈⠄⣩⣶⣿⣷⣿⣿⣿⣦⡀⠄⠄⠈⠁⠄⠊⠛⠛⠛⢉⣹⣟⠟⠇⠩⠿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⡇⠈⠁⠄⠄⠭⠄⢸⠄⠄⠄⠄⠄⠄⢁⠸⣿⣶⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣦⣤⣀⣀⣀⣀⣀⣀⠒⠈⠁⠄⠄⠄⢀⣨⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⡁⠄⠄⠄⠄⣫⠄⠘⡄⠄⠄⠄⠄⠄⠄⢂⠹⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡟⠛⠛⠛⣿⡄⠄⠄⣀⡀⠄⠻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⡆⠄⠄⠄⠄⠐⣊⠄⢣⠄⠄⠄⠄⠄⠄⠄⠳⡘⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠁⠄⠄⠄⠈⠉⠉⢻⡝⣷⠼⢎⡦⣿⠞⠿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⡇⠄⠄⠄⠄⠄⠐⠂⠄⢦⠄⠄⠄⠄⠄⠄⠄⠈⠢⣝⠻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣏⡀⠄⠄⣀⣀⣀⣀⣼⣿⡄⠺⣍⡅⠔⢂⣡⣌⢩⠻⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⠄⠄⠄⠄⠄⠄⠡⠒⠄⠳⡀⠄⠄⠄⠄⠄⠄⠄⠄⠙⠲⢍⡛⠿⣿⣿⣿⣿⣿⣿⣿⣷⣤⣤⣿⣿⣿⣿⣿⣿⣷⣀⡙⠊⠺⡿⡽⣿⣷⣭⡦⡽⡿⣿⣿⣿⣿⣿⢿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣧⠄⠄⠄⠄⠄⠄⠄⠠⠂⠈⠢⡀⠄⠄⠄⠄⠄⠄⠄⠄⠄⠈⠑⠒⠬⠍⣙⣛⠛⠛⠿⠿⠿⠿⠿⠿⠟⢛⣛⣋⠭⠴⡄⠈⠹⢿⣿⣹⣿⣿⣭⣿⣍⠻⢿⠟⠛⢻⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣧⠄⠄⠄⠄⠄⠄⢄⠊⡀⠄⠈⠲⣄⠄⠄⠄⡀⠄⠄⠂⠄⢠⠄⠄⠄⠄⠄⠉⠉⠉⠉⠉⢩⣭⣭⣭⡍⠁⠄⠄⠉⠿⡀⠁⠠⡻⣿⣿⣿⣿⣿⡽⢷⣄⠄⠈⣾⡿⣹⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣧⣄⣠⣤⠖⠳⣆⣑⢤⣘⢀⠄⠄⠙⠢⢬⡛⠁⢤⡀⠄⣄⠄⠄⠄⠄⠊⠉⠗⡿⠄⠄⠈⠛⠿⡿⠁⠄⠄⠄⠄⠄⠈⠄⠄⠐⠸⢿⡷⠝⠋⠁⠃⢝⣿⣶⣯⣊⣻⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣽⢿⣦⣽⣿⣷⢍⠂⠄⠄⠄⠄⠄⠈⠙⠲⠤⣍⣛⠒⠄⠄⠄⠄⠄⠄⣀⠄⠄⠄⠄⠄⢀⣀⠄⠄⠄⠄⠄⣀⣠⠄⠄⠈⠁⠄⠄⠄⢀⣠⡉⠙⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣦⡈⠛⣿⣿⠄⠄⠄⠈⠐⠠⢀⠄⠄⠄⢀⡆⢠⡍⢙⡒⠒⡲⠶⠦⠥⠤⠤⠤⠥⢤⡤⢶⣶⢲⡒⢉⡍⢰⡄⢼⠄⠄⠄⣠⣤⡂⠙⢄⠉⢶⣾⣿⡟⢿⣾⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣿⠋⠄⠄⠄⠄⠄⠄⠄⠈⠑⠂⠬⢄⣉⠁⠻⠲⠿⠥⣿⢀⣿⠄⣾⠄⣿⠄⣿⠱⡿⠘⠗⠄⠛⢀⡀⠄⠄⠂⠁⢘⣿⣷⣴⠈⢀⣠⣿⣥⣶⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣶⣄⠄⠄⠄⠰⠄⢀⢀⠄⠂⠄⠐⠄⠉⠉⠒⠒⠒⢸⣤⠤⡄⠄⠄⠄⠄⠒⣖⡒⠄⠄⠄⠄⠄⠄⠄⠄⡁⠄⣘⠿⠟⠋⣠⣼⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣦⣄⡀⠁⠛⠃⠠⣤⡀⠄⠄⡀⠄⠄⠰⡾⠿⠿⢿⣦⡀⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠤⣾⣻⣿⣷⣴⣶⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣶⣤⣤⣀⣈⠃⠄⠄⠄⠄⠄⠄⠜⠻⠷⣶⠶⠦⠄⢀⡀⠄⣀⣤⣤⣶⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⢿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣶⣶⣶⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠄⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠄⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⡿⠋⠉⣀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠄⢸⣿⣏⠉⠙⠻⣿⣿⣿⣿⠟⠉⢉⡉⠙⠻⣿⣿⣿⣿⠟⠉⢉⣹⣿⣿⣿⣿⣿⣿⠟⠋⢁⣀⠉⠛⢿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⠄⣰⣿⣿⣿⣿⣿⣿⣿⣿⠿⠿⠿⠿⢿⣿⣿⠄⢸⣿⣿⣿⣷⠄⢹⣿⣿⠃⢠⣾⣿⣿⣷⡀⢹⣿⣿⡇⢀⣾⡿⠻⣿⣿⣿⣿⣿⡏⠄⣾⡿⠻⣿⡆⠈⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⡀⠹⣿⣿⣿⠟⠄⣼⣿⣿⣶⣶⣶⣶⣾⣿⣿⡀⠸⣿⣿⣿⡿⠄⣼⣿⣿⡄⠘⢿⣿⣿⣿⡇⢸⣿⣿⣿⣿⣿⣷⣴⡿⠃⢠⣿⣿⣇⠄⢿⣷⣶⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣷⣤⣀⡉⣁⣠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣤⣀⢉⣁⣠⣴⣿⣿⣿⣿⣦⣀⠉⣿⣿⣷⣾⣿⣿⣿⣿⣿⣿⢉⣀⣴⣿⣿⣿⣿⣦⣄⣈⣹⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⣿⣻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡧⣿⣷⣿⣿⣿⣿⣿⣿⣿⣿⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⢿⣻⡿⠞⠋⠉⠻⡿⢿⣿⣿⠿⠟⠛⠛⠉⠛⠃⠙⠻⠛⢿⣿⢿⣿⣿⣿⣿⣿⣿⣏⡙⠻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⡿⣛⢭⠞⠋⠁⠄⠄⠄⠄⣠⢖⣠⣤⢼⣶⠶⠟⢛⣻⣿⠄⢸⣶⣾⣬⡉⠙⠛⠳⢾⣫⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠛⠋⠙⠟⣫⡴⠋⠄⠄⠄⠄⢀⣠⣶⠿⠯⠉⢋⣩⣥⣶⡿⢿⡿⠟⠻⠃⢻⣤⣄⣀⠄⠁⠛⢦⣴⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⠿⠍⠉⠄⠄⢠⡼⠋⢀⠄⠄⢀⢌⣴⠟⣹⣦⣀⣴⣚⣿⣿⠛⠁⣡⣠⣾⣾⣿⠂⠛⠛⠻⣿⡛⢲⣔⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⡿⠛⠻⠅⣤⠄⠠⠋⠄⠄⠋⠄⠠⢠⡟⣡⣾⣿⣿⡿⠛⠟⠛⠄⠄⠺⢟⢻⠫⠉⠄⠄⠄⠄⣢⢿⣿⣦⢺⣿⣻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⠟⣴⡶⠾⠄⠉⣠⣤⣤⣤⢤⣤⢤⡦⠄⠐⣿⣿⣿⡟⠃⠄⠄⠂⠄⣠⣤⣶⣯⠁⠄⠄⠄⣈⣴⣦⣸⣿⢿⣗⢓⣺⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⠄⣈⠰⠂⠄⠄⣭⡍⠾⠇⠾⠓⠚⢣⡤⠬⠿⢿⡷⢾⡀⠄⣀⣴⠄⠄⠙⢮⡻⢷⣦⣤⣤⣬⣝⢿⣿⣿⣟⡐⢠⢽⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⠁⠄⠄⡄⠄⠄⠄⠄⢀⣀⠤⠤⠐⡆⢶⡖⠈⠄⣩⣶⣿⣷⣿⣿⣿⣦⡀⠄⠄⠈⠁⠄⠊⠛⠛⠛⢉⣹⣟⠟⠇⠩⠿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⡇⠈⠁⠄⠄⠭⠄⢸⠄⠄⠄⠄⠄⠄⢁⠸⣿⣶⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣦⣤⣀⣀⣀⣀⣀⣀⠒⠈⠁⠄⠄⠄⢀⣨⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⡁⠄⠄⠄⠄⣫⠄⠘⡄⠄⠄⠄⠄⠄⠄⢂⠹⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡟⠛⠛⠛⣿⡄⠄⠄⣀⡀⠄⠻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⡆⠄⠄⠄⠄⠐⣊⠄⢣⠄⠄⠄⠄⠄⠄⠄⠳⡘⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠁⠄⠄⠄⠈⠉⠉⢻⡝⣷⠼⢎⡦⣿⠞⠿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⡇⠄⠄⠄⠄⠄⠐⠂⠄⢦⠄⠄⠄⠄⠄⠄⠄⠈⠢⣝⠻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣏⡀⠄⠄⣀⣀⣀⣀⣼⣿⡄⠺⣍⡅⠔⢂⣡⣌⢩⠻⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⠄⠄⠄⠄⠄⠄⠡⠒⠄⠳⡀⠄⠄⠄⠄⠄⠄⠄⠄⠙⠲⢍⡛⠿⣿⣿⣿⣿⣿⣿⣿⣷⣤⣤⣿⣿⣿⣿⣿⣿⣷⣀⡙⠊⠺⡿⡽⣿⣷⣭⡦⡽⡿⣿⣿⣿⣿⣿⢿⣿⣿⣿⣿
+⣿⣿⣿⣧⠄⠄⠄⠄⠄⠄⠄⠠⠂⠈⠢⡀⠄⠄⠄⠄⠄⠄⠄⠄⠄⠈⠑⠒⠬⠍⣙⣛⠛⠛⠿⠿⠿⠿⠿⠿⠟⢛⣛⣋⠭⠴⡄⠈⠹⢿⣿⣹⣿⣿⣭⣿⣍⠻⢿⠟⠛⢻⣿⣿⣿⣿
+⣿⣿⣿⣿⣧⠄⠄⠄⠄⠄⠄⢄⠊⡀⠄⠈⠲⣄⠄⠄⠄⡀⠄⠄⠂⠄⢠⠄⠄⠄⠄⠄⠉⠉⠉⠉⠉⢩⣭⣭⣭⡍⠁⠄⠄⠉⠿⡀⠁⠠⡻⣿⣿⣿⣿⣿⡽⢷⣄⠄⠈⣾⡿⣹⣿⣿
+⣿⣿⣿⣿⣿⣧⣄⣠⣤⠖⠳⣆⣑⢤⣘⢀⠄⠄⠙⠢⢬⡛⠁⢤⡀⠄⣄⠄⠄⠄⠄⠊⠉⠗⡿⠄⠄⠈⠛⠿⡿⠁⠄⠄⠄⠄⠄⠈⠄⠄⠐⠸⢿⡷⠝⠋⠁⠃⢝⣿⣶⣯⣊⣻⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣽⢿⣦⣽⣿⣷⢍⠂⠄⠄⠄⠄⠄⠈⠙⠲⠤⣍⣛⠒⠄⠄⠄⠄⠄⠄⣀⠄⠄⠄⠄⠄⢀⣀⠄⠄⠄⠄⠄⣀⣠⠄⠄⠈⠁⠄⠄⠄⢀⣠⡉⠙⢿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣦⡈⠛⣿⣿⠄⠄⠄⠈⠐⠠⢀⠄⠄⠄⢀⡆⢠⡍⢙⡒⠒⡲⠶⠦⠥⠤⠤⠤⠥⢤⡤⢶⣶⢲⡒⢉⡍⢰⡄⢼⠄⠄⠄⣠⣤⡂⠙⢄⠉⢶⣾⣿⡟⢿⣾⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣿⠋⠄⠄⠄⠄⠄⠄⠄⠈⠑⠂⠬⢄⣉⠁⠻⠲⠿⠥⣿⢀⣿⠄⣾⠄⣿⠄⣿⠱⡿⠘⠗⠄⠛⢀⡀⠄⠄⠂⠁⢘⣿⣷⣴⠈⢀⣠⣿⣥⣶⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣶⣄⠄⠄⠄⠰⠄⢀⢀⠄⠂⠄⠐⠄⠉⠉⠒⠒⠒⢸⣤⠤⡄⠄⠄⠄⠄⠒⣖⡒⠄⠄⠄⠄⠄⠄⠄⠄⡁⠄⣘⠿⠟⠋⣠⣼⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣦⣄⡀⠁⠛⠃⠠⣤⡀⠄⠄⡀⠄⠄⠰⡾⠿⠿⢿⣦⡀⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠤⣾⣻⣿⣷⣴⣶⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣶⣤⣤⣀⣈⠃⠄⠄⠄⠄⠄⠄⠜⠻⠷⣶⠶⠦⠄⢀⡀⠄⣀⣤⣤⣶⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⢿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣶⣶⣶⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠄⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠄⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⡿⠋⠉⣀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠄⢸⣿⣏⠉⠙⠻⣿⣿⣿⣿⠟⠉⢉⡉⠙⠻⣿⣿⣿⣿⠟⠉⢉⣹⣿⣿⣿⣿⣿⣿⠟⠋⢁⣀⠉⠛⢿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⠄⣰⣿⣿⣿⣿⣿⣿⣿⣿⠿⠿⠿⠿⢿⣿⣿⠄⢸⣿⣿⣿⣷⠄⢹⣿⣿⠃⢠⣾⣿⣿⣷⡀⢹⣿⣿⡇⢀⣾⡿⠻⣿⣿⣿⣿⣿⡏⠄⣾⡿⠻⣿⡆⠈⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⡀⠹⣿⣿⣿⠟⠄⣼⣿⣿⣶⣶⣶⣶⣾⣿⣿⡀⠸⣿⣿⣿⡿⠄⣼⣿⣿⡄⠘⢿⣿⣿⣿⡇⢸⣿⣿⣿⣿⣿⣷⣴⡿⠃⢠⣿⣿⣇⠄⢿⣷⣶⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣷⣤⣀⡉⣁⣠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣤⣀⢉⣁⣠⣴⣿⣿⣿⣿⣦⣀⠉⣿⣿⣷⣾⣿⣿⣿⣿⣿⣿⢉⣀⣴⣿⣿⣿⣿⣦⣄⣈⣹⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
 ```
 
 [c-base](https://c-base.org) is the oldest crashed space station on earth.
