--- a/content/blog/tlc2019.md
+++ b/content/blog/tlc2019.md
@@ -91,10 +91,43 @@ The contemporary concrete and its cold appearance feels actual. \\
 A rigid line separating families and friends feels actual. \\
 The cold war against individual liberties feels actual.
 
+The rain did not spoil the after-party, which was organised in
+a nice pub [Hirsch & Hase](https://hirschundhase.de/), near the station
+Voltastraße. Free Beer and free food ! But after hanging out with the
+French people group, we decided to try the famous Room77 pub.
+
 # Room 77 and the 600,000th block
 
-Room77 is one of the first place in the world which accepted bitcoin
-payments. Feel
+Location: [Room77](http://www.room77.de/) - Graefestraße 77, Berlin
+
+```
+ ──▄▄█▀▀▀▀▀█▄▄─  Room77 is one of the first place in the world wich
+▄█▀──▄─▄────▀█▄  accepted cryptocurrency payments.
+█───▀█▀▀▀▀▄───█
+█────█▄▄▄▄▀───█  A big Bitcoin sign in neon welcome you as you enter in
+█────█────█───█  a warm room with a cypherpunk ambiance. Price is good
+▀█▄─▀▀█▀█▀──▄█▀  and service is impeccable.
+──▀▀█▄▄▄▄▄█▀▀──
+```
+
+We had a lot of fun in this pub, which is quite cosy and pleasant. It
+was certainly the first and the last time we enjoyed it not overcrowded
+by the thirsty lightning community. Paying with lightning was really
+easy, a small machine displaying the qr-code was passing by the staff
+who was totally used to handle this kind of transaction.
+
+Coincidence or not it was the same night that the peer-to-peer
+distributed timestamp server of the Bitcoin protocole would generate its
+600 000th block, generating a computational proof of a chronological
+order of transaction for thousand of peers of its network and anchoring
+in time the issuance of 12.5 bitcoins inside the existing 18 millions.
+We waited for it, drinking beers and discussing about mostly informatics
+and community, refreshing some time a bright web page on our phone in
+the subdued light of the pub.
+
+We spent all our time in the bar until the 600 000th block happened,
+local time was around 2am. We celebrated it with a round of applause and
+a last drink, but tired by this long day I was happy to go to bed.
 
 # Day 1 --
 
