fix tlc2019: to much art

--- a/content/blog/tlc2019.md
+++ b/content/blog/tlc2019.md
@@ -1,7 +1,7 @@
 +++
 title = "The Lightning Conference 2019"
 date = "2019-10-21"
-draft = true
+draft = false
 +++
 ```pink
                ________
@@ -60,30 +60,6 @@ subway and get out to the nearest station. I could take the bus then, but I
 wanted to look at the street of Berlin. Walking along a wall, thinking
 of the Lightning, the exciting future to come, I noticed after several
 hundred meters how long this wall was and the size of its paintings.
-```
-⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢀⡀⠤⠐⠒⠄⠈⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
-⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡠⠂⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢸
-⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡠⠊⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣀⣤⣶⣿
-⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡜⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣀⣴⣶⣿⣿⣿⣿⣿
-⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡜⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢀⣀⣤⣶⣿⣿⣿⣿⣿⡿⠟⠋⠁
-⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢰⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢀⣠⣤⣾⣿⣿⣿⣿⠿⠛⠋⠙⠐⠄⠄⠄⠄
-⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠂⠄⠄⡀⠄⠄⡎⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢀⣠⣴⣶⣿⣿⣿⡿⠟⠛⠉⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
-⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠁⠄⠄⠄⠄⠄⠄⡯⠄⠄⡇⠄⠄⠄⠄⠄⠄⠄⠄⢀⣠⣶⣶⣿⣿⣿⡿⠟⠛⠉⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
-⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡔⠄⠄⠄⠄⠄⠄⠄⠄⣀⣀⣀⠄⡇⠄⠄⠄⢀⣠⣴⣶⣾⣿⣿⠿⠟⠋⠉⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
-⠄⠄⠄⠄⠄⠄⢀⠄⠐⠄⡘⠄⠄⠄⠄⠄⠄⠄⠄⠄⠙⣻⠋⠨⣇⣤⣶⣶⣿⡿⠿⠛⠉⠄⢸⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
-⠄⠄⠄⠄⢀⠄⠄⠄⠄⢀⠃⠄⠄⠄⠄⠄⠄⠄⢀⣠⣤⣶⣿⣿⠿⠟⠛⠉⠁⠄⠄⠄⠄⠄⢸⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢀⠑⠄⠄⠄⠄⠄⢂⠄⠄⠄⠄
-⠄⠄⠄⠄⠂⠄⠄⠈⠄⢸⠄⠄⠄⢀⣠⣴⣶⣿⠿⠛⠛⠉⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡀⠄⠄⠄⠄⠄⠄⢀⠂⠄⠄⠄⠄⠢⢅⠢⠄⠄⠄
-⠄⠄⠠⠈⠄⠄⠄⠄⠄⣸⣤⣶⡾⠿⠛⠉⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣤⠄⢠⡀⠄⠄⠄⠄⠄⠄⢀⡎⠇⠄⠄⠄⠄⢀⠈⠄⡄⠄⠰⣤⣺⢸⢐⠖⠈⡀⠄
-⠄⠄⠁⡖⠄⣀⣠⣴⠿⠛⠉⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠰⠟⠃⡟⠄⠄⠂⢂⢈⠄⠄⡸⠄⠄⠄⠄⠄⠠⡠⠄⢁⣧⢂⠠⠙⠄⢨⢾⣦⣨⣧⡰
-⢀⣬⣴⠷⠟⠛⠉⠄⠄⠄⠄⠄⢀⠄⠄⡀⠄⠄⠄⠄⠄⠄⠄⠄⢐⠄⠄⡀⠈⠄⢹⠄⠠⠄⠑⠄⠠⠰⣀⢀⠉⢀⠃⠉⠈⢠⠄⣇⢬⣷⣮⠵⣆⣇⣿⣸⣿⣿⣿⣮
-⠋⠉⠄⠄⠄⢀⠄⠄⠄⠄⢀⡆⣸⠄⠄⡁⠄⠄⠄⠄⠄⢀⠄⠄⠠⠄⠄⠰⠄⡁⡈⠄⠅⡨⡄⣠⣧⣷⣿⠬⣺⠺⣠⢴⡎⣸⡶⣥⣼⣷⣿⣟⣩⢐⣶⣿⣿⣿⣿⣿
-⠄⡀⠄⡄⠄⢿⢀⠄⠄⣦⢸⣟⣿⠄⠄⠄⠄⠄⠄⠄⢀⠘⠄⠄⢖⠄⠄⣠⠠⣬⣷⠘⣸⢧⡽⣿⣿⣿⣿⣼⣿⣿⣿⣿⣷⣿⣿⣿⣿⣿⣿⣿⣾⣾⣿⣿⣿⣿⣿⣿
-⡃⣩⣿⡇⠐⣯⡏⡇⠄⠈⢸⣿⣷⠄⠄⡄⠄⠄⠄⣤⡌⣄⠇⢀⣨⠄⠄⠄⠺⣧⣟⢨⣳⣼⣷⣿⣿⣿⣿⡿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⡏⣵⡝⡇⠄⡩⢃⣀⠄⠄⢻⣿⣿⠄⠄⠵⢀⢰⡆⠿⠿⣻⡠⢸⣹⠄⣧⢚⢼⣿⣾⣾⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⡟⠞⠃⠃⠐⣗⢨⠜⠄⠄⢸⣿⣿⠄⠄⠆⠄⠈⢃⠄⢠⠈⠁⣹⣽⢀⢩⣼⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣷⣶⣶⣷⣶⣶⣤⣶⣶⣾⣿⣿⣦⣤⣦⣤⣤⣼⣥⣄⣬⣴⣷⣧⣼⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-```
 
 On a little sign, near the ground, was written: **Berliner Mauer**. \\
 One month before its 30th anniversary, this wall did not catch my eyes. \\
@@ -145,38 +121,15 @@ Sadly, I could not enter in the sponsored party.
 # c-base, a Raumstation unter Berlin
 
 ```
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⣿⣻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡧⣿⣷⣿⣿⣿⣿⣿⣿⣿⣿⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⢿⣻⡿⠞⠋⠉⠻⡿⢿⣿⣿⠿⠟⠛⠛⠉⠛⠃⠙⠻⠛⢿⣿⢿⣿⣿⣿⣿⣿⣿⣏⡙⠻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⡿⣛⢭⠞⠋⠁⠄⠄⠄⠄⣠⢖⣠⣤⢼⣶⠶⠟⢛⣻⣿⠄⢸⣶⣾⣬⡉⠙⠛⠳⢾⣫⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠛⠋⠙⠟⣫⡴⠋⠄⠄⠄⠄⢀⣠⣶⠿⠯⠉⢋⣩⣥⣶⡿⢿⡿⠟⠻⠃⢻⣤⣄⣀⠄⠁⠛⢦⣴⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⠿⠍⠉⠄⠄⢠⡼⠋⢀⠄⠄⢀⢌⣴⠟⣹⣦⣀⣴⣚⣿⣿⠛⠁⣡⣠⣾⣾⣿⠂⠛⠛⠻⣿⡛⢲⣔⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⡿⠛⠻⠅⣤⠄⠠⠋⠄⠄⠋⠄⠠⢠⡟⣡⣾⣿⣿⡿⠛⠟⠛⠄⠄⠺⢟⢻⠫⠉⠄⠄⠄⠄⣢⢿⣿⣦⢺⣿⣻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⠟⣴⡶⠾⠄⠉⣠⣤⣤⣤⢤⣤⢤⡦⠄⠐⣿⣿⣿⡟⠃⠄⠄⠂⠄⣠⣤⣶⣯⠁⠄⠄⠄⣈⣴⣦⣸⣿⢿⣗⢓⣺⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⠄⣈⠰⠂⠄⠄⣭⡍⠾⠇⠾⠓⠚⢣⡤⠬⠿⢿⡷⢾⡀⠄⣀⣴⠄⠄⠙⢮⡻⢷⣦⣤⣤⣬⣝⢿⣿⣿⣟⡐⢠⢽⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⠁⠄⠄⡄⠄⠄⠄⠄⢀⣀⠤⠤⠐⡆⢶⡖⠈⠄⣩⣶⣿⣷⣿⣿⣿⣦⡀⠄⠄⠈⠁⠄⠊⠛⠛⠛⢉⣹⣟⠟⠇⠩⠿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⡇⠈⠁⠄⠄⠭⠄⢸⠄⠄⠄⠄⠄⠄⢁⠸⣿⣶⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣦⣤⣀⣀⣀⣀⣀⣀⠒⠈⠁⠄⠄⠄⢀⣨⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⡁⠄⠄⠄⠄⣫⠄⠘⡄⠄⠄⠄⠄⠄⠄⢂⠹⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡟⠛⠛⠛⣿⡄⠄⠄⣀⡀⠄⠻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⡆⠄⠄⠄⠄⠐⣊⠄⢣⠄⠄⠄⠄⠄⠄⠄⠳⡘⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠁⠄⠄⠄⠈⠉⠉⢻⡝⣷⠼⢎⡦⣿⠞⠿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⡇⠄⠄⠄⠄⠄⠐⠂⠄⢦⠄⠄⠄⠄⠄⠄⠄⠈⠢⣝⠻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣏⡀⠄⠄⣀⣀⣀⣀⣼⣿⡄⠺⣍⡅⠔⢂⣡⣌⢩⠻⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⠄⠄⠄⠄⠄⠄⠡⠒⠄⠳⡀⠄⠄⠄⠄⠄⠄⠄⠄⠙⠲⢍⡛⠿⣿⣿⣿⣿⣿⣿⣿⣷⣤⣤⣿⣿⣿⣿⣿⣿⣷⣀⡙⠊⠺⡿⡽⣿⣷⣭⡦⡽⡿⣿⣿⣿⣿⣿⢿⣿⣿⣿⣿
-⣿⣿⣿⣧⠄⠄⠄⠄⠄⠄⠄⠠⠂⠈⠢⡀⠄⠄⠄⠄⠄⠄⠄⠄⠄⠈⠑⠒⠬⠍⣙⣛⠛⠛⠿⠿⠿⠿⠿⠿⠟⢛⣛⣋⠭⠴⡄⠈⠹⢿⣿⣹⣿⣿⣭⣿⣍⠻⢿⠟⠛⢻⣿⣿⣿⣿
-⣿⣿⣿⣿⣧⠄⠄⠄⠄⠄⠄⢄⠊⡀⠄⠈⠲⣄⠄⠄⠄⡀⠄⠄⠂⠄⢠⠄⠄⠄⠄⠄⠉⠉⠉⠉⠉⢩⣭⣭⣭⡍⠁⠄⠄⠉⠿⡀⠁⠠⡻⣿⣿⣿⣿⣿⡽⢷⣄⠄⠈⣾⡿⣹⣿⣿
-⣿⣿⣿⣿⣿⣧⣄⣠⣤⠖⠳⣆⣑⢤⣘⢀⠄⠄⠙⠢⢬⡛⠁⢤⡀⠄⣄⠄⠄⠄⠄⠊⠉⠗⡿⠄⠄⠈⠛⠿⡿⠁⠄⠄⠄⠄⠄⠈⠄⠄⠐⠸⢿⡷⠝⠋⠁⠃⢝⣿⣶⣯⣊⣻⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣽⢿⣦⣽⣿⣷⢍⠂⠄⠄⠄⠄⠄⠈⠙⠲⠤⣍⣛⠒⠄⠄⠄⠄⠄⠄⣀⠄⠄⠄⠄⠄⢀⣀⠄⠄⠄⠄⠄⣀⣠⠄⠄⠈⠁⠄⠄⠄⢀⣠⡉⠙⢿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣦⡈⠛⣿⣿⠄⠄⠄⠈⠐⠠⢀⠄⠄⠄⢀⡆⢠⡍⢙⡒⠒⡲⠶⠦⠥⠤⠤⠤⠥⢤⡤⢶⣶⢲⡒⢉⡍⢰⡄⢼⠄⠄⠄⣠⣤⡂⠙⢄⠉⢶⣾⣿⡟⢿⣾⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣿⠋⠄⠄⠄⠄⠄⠄⠄⠈⠑⠂⠬⢄⣉⠁⠻⠲⠿⠥⣿⢀⣿⠄⣾⠄⣿⠄⣿⠱⡿⠘⠗⠄⠛⢀⡀⠄⠄⠂⠁⢘⣿⣷⣴⠈⢀⣠⣿⣥⣶⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣶⣄⠄⠄⠄⠰⠄⢀⢀⠄⠂⠄⠐⠄⠉⠉⠒⠒⠒⢸⣤⠤⡄⠄⠄⠄⠄⠒⣖⡒⠄⠄⠄⠄⠄⠄⠄⠄⡁⠄⣘⠿⠟⠋⣠⣼⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣦⣄⡀⠁⠛⠃⠠⣤⡀⠄⠄⡀⠄⠄⠰⡾⠿⠿⢿⣦⡀⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠤⣾⣻⣿⣷⣴⣶⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣶⣤⣤⣀⣈⠃⠄⠄⠄⠄⠄⠄⠜⠻⠷⣶⠶⠦⠄⢀⡀⠄⣀⣤⣤⣶⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⢿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣶⣶⣶⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠄⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠄⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⡿⠋⠉⣀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠄⢸⣿⣏⠉⠙⠻⣿⣿⣿⣿⠟⠉⢉⡉⠙⠻⣿⣿⣿⣿⠟⠉⢉⣹⣿⣿⣿⣿⣿⣿⠟⠋⢁⣀⠉⠛⢿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⠄⣰⣿⣿⣿⣿⣿⣿⣿⣿⠿⠿⠿⠿⢿⣿⣿⠄⢸⣿⣿⣿⣷⠄⢹⣿⣿⠃⢠⣾⣿⣿⣷⡀⢹⣿⣿⡇⢀⣾⡿⠻⣿⣿⣿⣿⣿⡏⠄⣾⡿⠻⣿⡆⠈⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⡀⠹⣿⣿⣿⠟⠄⣼⣿⣿⣶⣶⣶⣶⣾⣿⣿⡀⠸⣿⣿⣿⡿⠄⣼⣿⣿⡄⠘⢿⣿⣿⣿⡇⢸⣿⣿⣿⣿⣿⣷⣴⡿⠃⢠⣿⣿⣇⠄⢿⣷⣶⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣷⣤⣀⡉⣁⣠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣤⣀⢉⣁⣠⣴⣿⣿⣿⣿⣦⣀⠉⣿⣿⣷⣾⣿⣿⣿⣿⣿⣿⢉⣀⣴⣿⣿⣿⣿⣦⣄⣈⣹⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠄⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠄⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⡿⠋⠉⣀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠄⢸⣿⣏⠉⠙⠻⣿⣿⣿⣿⠟⠉⢉⡉⠙⠻⣿⣿⣿⣿⠟⠉⢉⣹⣿⣿⣿⣿⣿⣿⠟⠋⢁⣀⠉⠛⢿⣿⣿⣿
+⣿⣿⣿⣿⣿⠄⣰⣿⣿⣿⣿⣿⣿⣿⣿⠿⠿⠿⠿⢿⣿⣿⠄⢸⣿⣿⣿⣷⠄⢹⣿⣿⠃⢠⣾⣿⣿⣷⡀⢹⣿⣿⡇⢀⣾⡿⠻⣿⣿⣿⣿⣿⡏⠄⣾⡿⠻⣿⡆⠈⣿⣿⣿
+⣿⣿⣿⣿⣿⡀⠹⣿⣿⣿⠟⠄⣼⣿⣿⣶⣶⣶⣶⣾⣿⣿⡀⠸⣿⣿⣿⡿⠄⣼⣿⣿⡄⠘⢿⣿⣿⣿⡇⢸⣿⣿⣿⣿⣿⣷⣴⡿⠃⢠⣿⣿⣇⠄⢿⣷⣶⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣷⣤⣀⡉⣁⣠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣤⣀⢉⣁⣠⣴⣿⣿⣿⣿⣦⣀⠉⣿⣿⣷⣾⣿⣿⣿⣿⣿⣿⢉⣀⣴⣿⣿⣿⣿⣦⣄⣈⣹⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
 ```
 
 [c-base](https://c-base.org) is the oldest crashed space station on earth.
