fix tlc: still draft

--- a/content/blog/tlc2019.md
+++ b/content/blog/tlc2019.md
@@ -1,7 +1,7 @@
 +++
 title = "The Lightning Conference 2019"
 date = "2019-10-21"
-draft = false
+draft = true
 +++
 ```pink
                ________
@@ -110,13 +110,38 @@ a last drink, but tired by this long day I was happy to go to bed.
 Talks, I attended:
 
 - 10:10 Enterprise Lightning FTW - Jameson Lopp
-- 10:20 Make me an offer: Next Level Invoicing - Rusty Russell
-- 11:20 How much Better Could Lightning Be? - Fabrice Drouin
+- 10:30 Make me an offer: Next Level Invoicing - Rusty Russell
+- 11:00 How much Better Could Lightning Be? - Fabrice Drouin
+- 11:20 pAMP it - Conner Fromknecht
+- 11:40 Of Channels, Flows and Icebergs - Christian Decker
+- 12:00 LSAT: Your Ticket Aboard the Internet's Money Rails - Olaoluwa
+    Osuntokun
+- 13:30 Building a More Friendly Lightning User Experience - Will O'Beirne
+- 13:50 Hedging the Chain - Jack Mallers
+- 16:00 Lightning x Liquidity, Or A Financier's Guide to Staking Bitcoin - Lisa Neigut
+- 17:00 Lightning integration in Electrum - Thomas Voegtlin
 
 
-Sadly, I could not enter in the sponsored party.
+Jack Mallers was really impressive, the talk was not really technical
+but it was a great explanation about financial tools.
+
+Olaoluwa Osuntokun talks fast, it is a meme in the community, but
+believe me or not even for a non english speaker like me all is
+intelligible , and the quantity of relevant information, deep in detail
+explanation of technical solution of complex problem is outstanding.
+
+
+Sadly, I could not enter in the sponsored party, not enough place was
+reserved for the conference attended. The french group and I ended
+again in Room77.
 
 # Day 2 --
+
+Talks, I attended:
+
+
+Someone in the french group had a contact with a member of the c-base
+hackerspace and we were invited to visit it.
 
 # c-base, a Raumstation unter Berlin
 
